IBX-764: Added Kernel / Repository Test API

--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
         "ezsystems/ezplatform-code-style": "^0.2",
         "phpunit/phpunit": "^8.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
-        "symfony/phpunit-bridge": "^5.1"
+        "symfony/phpunit-bridge": "^5.1",
+        "symfony/proxy-manager-bridge": "^5.3"
     },
     "conflict": {
         "symfony/security-core": "5.3.0",
