--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
         "symfony/proxy-manager-bridge": "^5.3"
     },
     "conflict": {
+        "symfony/dependency-injection": "5.3.7",
         "symfony/security-core": "5.3.0",
         "doctrine/dbal": "2.7.0",
         "ezsystems/ezpublish-legacy": "*",
