--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/image.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/image.yml
@@ -67,6 +67,7 @@ services:
             - '@ezpublish.image_alias.imagine.variation.imagine_alias_generator'
             - '@ezpublish.cache_pool'
             - '@router.request_context'
+            - '@Ibexa\Core\Persistence\Cache\Tag\CacheIdentifierGeneratorInterface'
         calls:
             - [setSiteAccess, ['@ezpublish.siteaccess']]
 
